Bugfix for not parsable Numbers (NumberFormatException when loading users)
git-svn-id: https://svn.berlios.de/svnroot/repos/yacy/trunk@985 6c8d7289-2bf4-0310-a012-ef5d649a1542